--- a/notifyToken.ejs
+++ b/notifyToken.ejs
@@ -1,7 +1,7 @@
 <h1>LINE NOTIFYに登録しました</h1>
 <form method="post" action="/sendline">
   <input type="text">
-  <input type="button" value="lineに送信">
+  <input type="submit" value="lineに送信">
   <input type="hidden" name="token" value=<%= token %>>
 </form>
 <table>
