--- a/notifyToken.ejs
+++ b/notifyToken.ejs
@@ -1,6 +1,6 @@
 <h1>LINE NOTIFYに登録しました</h1>
 <form method="post" action="/sendline">
-  <input type="text">
+  <input type="text" name="msg">
   <input type="submit" value="lineに送信">
   <input type="hidden" name="token" value=<%= token %>>
 </form>
