--- a/notifyToken.ejs
+++ b/notifyToken.ejs
@@ -29,7 +29,7 @@
   </head>
   <body>
       <input type="text" name="msg">
-      <input type="button" onlclick="execPost();" value="lineに送信">
+      <input type="button" onclick="execPost();" value="lineに送信">
       <input type="hidden" name="token" value=<%= token %>>
     <table>
       <tr><td>status:</td><td><%= status %></td></tr>
