--- a/notifyToken.ejs
+++ b/notifyToken.ejs
@@ -6,7 +6,7 @@
             // フォームの生成
             var form = document.createElement("form");
             form.setAttribute("action", "/sendline");
-            form.setAttribute("method", "get");
+            form.setAttribute("method", "post");
             form.style.display = "none";
             document.body.appendChild(form);
             // パラメタの設定
