--- a/stripeInvoice.ejs
+++ b/stripeInvoice.ejs
@@ -28,9 +28,7 @@
   <body>
       <input type="button" onclick="execPost();return false;" value="顧客・カード登録">
     <table>
-      <tr><td>customer:</td><td><%= customer %></td></tr>
-      <tr><td>message:</td><td><%= message %></td></tr>
-      <tr><td>token:</td><td><%= token %></td></tr>
+      <tr><td>customer:</td><td id="customer" ></td></tr>
     </table>
   </body>
  
