--- a/stripeInvoice.ejs
+++ b/stripeInvoice.ejs
@@ -8,7 +8,9 @@
             xhr.open("post", "stripeCreateCus");
             xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
             xhr.send("email="+document.getElementById("email").value);
-            xhr.onreadystatechange = function() {}
+            xhr.onreadystatechange = function() {
+              document.getElementById("customer").value = this.responseText;
+            }
           }
 
           function invoice() {
@@ -16,7 +18,9 @@
             xhr.open("post", "invoice");
             xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
             xhr.send("customer="+document.getElementById("customer").value);
-            xhr.onreadystatechange = function() {}
+            xhr.onreadystatechange = function() {
+              
+            }
           }
       </script>
   </head>
